--- a/package.json
+++ b/package.json
@@ -9,9 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@biomejs/biome": "^1.7.3",
+    "@hookform/resolvers": "^3.3.4",
+    "framer-motion": "^11.1.9",
+    "next": "14.2.3",
+    "prettier": "^3.2.5",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.3"
+    "react-hook-form": "^7.51.4",
+    "zod": "^3.23.6"
   },
   "devDependencies": {
     "typescript": "^5",
