--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@biomejs/biome": "^1.7.3",
     "@hookform/resolvers": "^3.3.4",
+    "framer-motion": "^11.1.9",
     "next": "14.2.3",
     "prettier": "^3.2.5",
     "react": "^18",
