--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.4",
+    "sharp": "^0.33.3",
     "zod": "^3.23.6"
   },
   "devDependencies": {
