--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
   "dependencies": {
     "@biomejs/biome": "^1.7.3",
     "@hookform/resolvers": "^3.3.4",
+    "@types/nodemailer": "^6.4.15",
     "framer-motion": "^11.1.9",
     "next": "14.2.3",
+    "nodemailer": "^6.9.13",
     "prettier": "^3.2.5",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.4",
+    "react-hot-toast": "^2.4.1",
     "sharp": "^0.33.3",
     "zod": "^3.23.6"
   },
