--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.51.4",
     "react-hot-toast": "^2.4.1",
+    "react-turnstile": "^1.1.3",
     "sharp": "^0.33.3",
     "zod": "^3.23.6"
   },
