--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "framer-motion": "^11.1.9",
     "next": "14.2.3",
     "nodemailer": "^6.9.13",
+    "plaiceholder": "^3.0.0",
     "prettier": "^3.2.5",
     "react": "^18",
     "react-dom": "^18",
