--- a/package.json
+++ b/package.json
@@ -12,8 +12,13 @@
   "dependencies": {
     "@biomejs/biome": "^1.7.3",
     "@hookform/resolvers": "^3.3.4",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-slot": "^1.0.2",
     "@types/nodemailer": "^6.4.15",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "framer-motion": "^11.1.9",
+    "lucide-react": "^0.383.0",
     "next": "14.2.3",
     "nodemailer": "^6.9.13",
     "plaiceholder": "^3.0.0",
@@ -24,7 +29,10 @@
     "react-hot-toast": "^2.4.1",
     "react-turnstile": "^1.1.3",
     "sharp": "^0.33.3",
-    "zod": "^3.23.6"
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.23.6",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "typescript": "^5",
