--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
     "@biomejs/biome": "^1.7.3",
     "@hookform/resolvers": "^3.3.4",
     "@radix-ui/react-dialog": "^1.0.5",
-    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-slot": "^1.1.0",
     "@types/nodemailer": "^6.4.15",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "embla-carousel-react": "^8.1.5",
     "framer-motion": "^11.1.9",
     "lucide-react": "^0.383.0",
     "next": "14.2.3",
